attempted fix of octocat not showing

--- a/css/style.sass
+++ b/css/style.sass
@@ -148,7 +148,7 @@ body
 
 @media screen and (min-width: $break-width)
     .github-corner
-        display: block
+        // display: block
 
 @media screen and (max-width: $break-width)
     .github-corner
